syntax = "proto3";

package unary;

option java_multiple_files = true;
option java_package = "com.lazycece.grpc.demo.proto.unary";
option java_outer_classname = "UnaryProto";

// 定义服务
service UnaryService {
    rpc sayHello (HelloRequest) returns (HelloResponse) {}
}

// 定义请求体负载
message HelloRequest {
    string name = 1;
}

// 定义返回体负载
message HelloResponse {
    string message = 1;
}
